--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,12 @@
 		<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacv-platform</artifactId>
-			<version>1.3.1</version>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacpp</artifactId>
+			<version>1.5.5</version>
 		</dependency>
 	</dependencies>
 
