--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
 			<artifactId>javacpp</artifactId>
 			<version>1.5.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>ffmpeg-platform</artifactId>
+			<version>4.3.2-1.5.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
