--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
 	<name>file-engine</name>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<javadoc.opts>-Xdoclint:none</javadoc.opts>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
+		<start-class>com.jonasjschreiber.fileengine.FileEngineApplication</start-class>
 	</properties>
 
 	<dependencies>
